--- a/multi-stage-multi-agent/Jenkinsfile
+++ b/multi-stage-multi-agent/Jenkinsfile
@@ -1,14 +1,30 @@
 pipeline {
-  agent none
-  stages {
-    stage('Back-end') {
-      agent {
-        docker { image 'maven:3.8.1-adoptopenjdk-11' }
-      }
-      steps {
-        sh 'mvn --version'
-      }
+    agent none
+    stages {
+        stage('Build and Run HelloWorld') {
+            agent {
+                docker { image 'maven:3.8.1-adoptopenjdk-11' }
+            }
+            steps {
+                // Check out the code from the repository
+                checkout scm
+
+                // Compile the HelloWorld.java file
+                sh 'mvn clean compile'
+
+                // Execute the HelloWorld class 
+
+                sh 'mvn exec:java -Dexec.mainClass="com.vishnu.HelloWorld"'
+            }
+        }
     }
 
-  }
+    post {
+        success {
+            echo 'Build and execution successful!'
+        }
+        failure {
+            echo 'Build or execution failed.'
+        }
+    }
 }
