--- a/multi-stage-multi-agent/Jenkinsfile
+++ b/multi-stage-multi-agent/Jenkinsfile
@@ -1,19 +1,24 @@
 pipeline {
-    agent none
+    agent any
+
     stages {
-        stage('Build and Run HelloWorld') {
-            agent {
-                docker { image 'maven:3.8.1-adoptopenjdk-11' }
-            }
+        stage('Checkout') {
             steps {
                 // Check out the code from the repository
                 checkout scm
+            }
+        }
 
-                // Compile the HelloWorld.java file
-                sh 'mvn clean compile'
+        stage('Build') {
+            steps {
+                // Use Maven to build the project
+                sh 'mvn clean package'
+            }
+        }
 
-                // Execute the HelloWorld class 
-
+        stage('Execute') {
+            steps {
+                // Use Maven to run the HelloWorld application
                 sh 'mvn exec:java -Dexec.mainClass="com.vishnu.HelloWorld"'
             }
         }
