--- a/multi-stage-multi-agent/Jenkinsfile
+++ b/multi-stage-multi-agent/Jenkinsfile
@@ -9,7 +9,10 @@ pipeline {
             }
         }
 
-        stage('Build') {
+     stage('Build') {
+              agent {
+        docker { image 'maven:3.8.1-adoptopenjdk-11' }
+      }
             steps {
                 // Use Maven to build the project
                 sh 'mvn clean package'
@@ -17,6 +20,10 @@ pipeline {
         }
 
         stage('Execute') {
+
+              agent {
+        docker { image 'maven:3.8.1-adoptopenjdk-11' }
+      }
             steps {
                 // Use Maven to run the HelloWorld application
                 sh 'mvn exec:java -Dexec.mainClass="com.vishnu.HelloWorld"'
