--- a/multi-stage-multi-agent/Jenkinsfile
+++ b/multi-stage-multi-agent/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
         docker { image 'maven:3.8.1-adoptopenjdk-11' }
       }
       steps {
+        checkout scm
         sh 'mvn clean install'
       }
     }
